--- a/src/pages/needs.html
+++ b/src/pages/needs.html
@@ -24,7 +24,15 @@
                     Orientações de Preenchimento                    
                 </h1>
                 <p class="text">
-                    DOCUMENTOS QUE COMPROVEM A RECLAMAÇÃO (COMO CONTRATOS, RECIBOS, E-MAILS E FOTOGRAFIAS): O autor deve anexar ao pedido cópia de todos os documentos relativos à questão, tais como contrato, nota fiscal, orçamento, etc. Se houver testemunhas, o autor também deve informar seus nomes e endereços, respeitando o limite máximo de três. Caso o autor tenha receio de que as testemunhas não compareçam espontaneamente, pode requerer à Secretaria que elas sejam intimadas, no prazo de até cinco dias antes da audiência.
+                     DOCUMENTOS QUE COMPROVEM A RECLAMAÇÃO (COMO CONTRATOS, RECIBOS, E-MAILS E FOTOGRAFIAS): O autor deve anexar ao pedido cópia de todos os documentos relativos à questão, tais como contrato, nota fiscal e orçamento, bem como deverá anexar DOCUMENTO DE IDENTIFICAÇÃO E COMPROVANTE DE RESIDÊNCIA. Se houver testemunhas, o autor também deve informar seus nomes e endereços, respeitando o limite máximo de três. Caso o autor tenha receio de que as testemunhas não compareçam espontaneamente, pode requerer à Secretaria que elas sejam intimadas, no prazo de até cinco dias antes da audiência.
+                    <br>
+                    <br> <br> OBS:. Caso tenha interesse em se cadastrar como Jus Postulandi para poder acompanhar e realizar as movimentações diretamente no processo (por exemplo peticionar e ser intimado(a)), bem como poderá entrar com novas ações. 
+                    <br> <br> <br><a href="https://www.tjsc.jus.br/documents/3061010/3872774/Edi%C3%A7%C3%A3o+27+-+Jus+Postulandi.pdf/89788451-379a-47c9-2c20-f71eec096f51#:~:text=A%20valida%C3%A7%C3%A3o%20do%20Jus%20postulandi,a%20op%C3%A7%C3%A3o%20Validar%20Jus%20Postulandi" target="_blank" style="color: black;">
+                    Clique aqui para abrir o Manual
+                    </a>
+                    <br><a href="https://eproc1g.tjsc.jus.br/eproc/externo_controlador.php?acao=selecionar_tipo_jus_postulandi_cadastrar" target="_blank" style="color: black;">
+                       Clique aqui para se cadastrar como Jus Postulandi </a>
+                    <br> <br> Em caso de dúvidas, nossos contatos são: 4731308408, itapoa.distribuicao@tjsc.jus.br
                 </p>
             </div>
             <div class="button-container">
